--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -20,6 +32,8 @@ header h1 {
     padding-top: 50px;
     font-variant: small-caps;
     /* text-transform: uppercase;*/
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header p {
@@ -41,6 +55,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 2vw;
 }
 section.normal{
     background-color: white;
@@ -50,11 +66,31 @@ section.normal{
 section.imagem {
     background-color: rgb(79, 78, 78);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.651);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.285);
-    width: 500px;
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.359);
+    box-shadow: 1px 1px 0px black;
+    
+}
+
+section#img1 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img2 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+}
+section p {
+    padding-bottom: 2em;
 }
 footer{
     background-color: black;
